# reep

./: .gitignore  CLAUDE.md  LICENSE  README.md  openapi.yaml  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  wrangler.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml  update-register.yml
cli/: pyproject.toml  reep.py  test_reep.py
data/: competitions.csv  custom_ids.json  meta.json  seasons.csv  teams.csv
data/json/: competitions.json  seasons.json
data/samples/: match_dictionary.csv  names.csv  people.csv  teams.csv
docs/superpowers/plans/: 2026-04-04-competitions-seasons.md
docs/superpowers/specs/: 2026-04-04-competitions-seasons-design.md
schemas/: football-entities.sql
scripts/: check-sync.py  clone-to-staging.py  create-provider-ids.py  csv-to-json.py  cutover-reep-id.py  dedup-check.py  enrich-wikidata-bio.py  export-csv.py  fetch-custom-ids.py  fetch-wikidata-entities.py  import-opta-entities.py  incremental-update.py  mint-reep-ids.py  rekey-custom-ids.py  research-competitions.py  resolve-dupes.py  seed-wikidata-d1.py  stream-wikidata-dump.py
src/: worker.ts
